--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: CleverNoise
 email: vishwadeepb456@gmail.com
 baseurl: "" 
 url: "https://clevernoise.github.io" 
-theme: jekyll-theme-minima
+theme: jekyll-theme-minimal
